<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--key attribute is for identification when we need store it or grab value-->
    <EditTextPreference
        android:defaultValue="@string/pref_location_default"
        android:inputType="text"
        android:key="@string/pref_location_key"
        android:singleLine="true"
        android:title="@string/pref_location_label" />

    <!--entries and values is stored in arrays.xml-->
    <ListPreference
        android:defaultValue="@string/pref_metric_units_value"
        android:entries="@array/pref_temperature_entries"
        android:entryValues="@array/pref_temperature_values"
        android:key="@string/pref_units_key"
        android:title="@string/pref_units_label" />

</PreferenceScreen>